# granular_synth

./: Cargo.toml  tracks.json
src/: audio.rs  granular_synth.rs  granular_synth_config.rs  main.rs  sampler.rs  sequencer.rs
