[package]
name = "granular_synth"
version = "0.1.0"
edition = "2018"

[profile.release]
lto = "fat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wav = "1.0.0"
rubato = "0.8.1"
serde = { version = "1.0.127", features = ["derive"] }
serde_json = "1.0.66"
rand = "0.8.4"
